--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1,11 +1,13 @@
 html,
 body {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-size: 62.5%;
   color: black;
 }
+
 body {
   background-color: yellow;
 }
@@ -18,6 +20,7 @@ body {
   height: 12vh;
   text-align: center;
 }
+
 .food-type {
   margin: 1rem;
   text-align: center;
@@ -28,17 +31,25 @@ body {
   height: 10vh;
   background-color: limegreen;
 }
+
 .recipe-grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   width: 95vw;
   height: 70vh;
   background-color: royalblue;
   margin: 1rem auto;
   margin-top: 3.5rem;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 .recipe-card {
   height: 65vh;
   width: 20vw;
@@ -46,6 +57,7 @@ body {
   position: relative;
   margin: 2rem auto;
 }
+
 .recipe-card-front {
   position: absolute;
   width: 100%;
@@ -55,29 +67,38 @@ body {
   left: 0;
   background-position: center;
   z-index: 3;
+  -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
 
 .recipe-card-back {
+  -webkit-transition: all 0.3s;
   transition: all 0.3s;
   position: absolute;
   top: 0;
   left: 0;
   z-index: 1;
   display: none;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   height: 100%;
 }
+
 .recipe-card-header {
   font-size: 5rem;
   text-transform: uppercase;
   margin: 1rem auto;
-
   text-align: center;
 }
+
 .score-box,
 .food-box {
   text-align: center;
@@ -86,19 +107,28 @@ body {
 .recipe-genres {
   font-size: 3rem;
   padding: 1rem 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 .recipe-genre {
   list-style: none;
 }
+
 .health-score {
   font-size: 2.5rem;
   text-transform: uppercase;
 }
+
 .food-form {
   font-size: 2.5rem;
   text-transform: uppercase;
@@ -107,11 +137,16 @@ body {
 .recipe-card:hover .recipe-card-front {
   z-index: 1;
 }
+
 .recipe-card:hover .recipe-card-back {
   z-index: 3;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 .test {
   color: black;
   font-size: 3rem;
 }
+/*# sourceMappingURL=style.css.map */
