--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -99,7 +99,7 @@ body {
   font-size: 2.5rem;
   text-transform: uppercase;
 }
-.food-form {
+.spoon-score {
   font-size: 2.5rem;
   text-transform: uppercase;
 }
