--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,7 +15,7 @@ body {
   background-color: green;
   color: yellow;
   margin: -1rem auto;
-  height: 12vh;
+  height: 13vh;
   text-align: center;
 }
 .food-type {
@@ -33,7 +33,7 @@ body {
   flex-wrap: wrap;
   justify-content: space-around;
   width: 95vw;
-  height: 70vh;
+  height: auto;
   background-color: royalblue;
   margin: 1rem auto;
   margin-top: 3.5rem;
