--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -36,15 +36,15 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -ms-flex-wrap: nonwrap;
+      flex-wrap: nonwrap;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   width: 95vw;
   height: auto;
   background-color: royalblue;
   margin: 1rem auto;
-  margin-top: 3.5rem;
+  margin-top: 3rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
