--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,13 +30,13 @@ body {
 }
 .recipe-grid {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nonwrap;
   justify-content: space-around;
   width: 95vw;
   height: auto;
   background-color: royalblue;
   margin: 1rem auto;
-  margin-top: 3.5rem;
+  margin-top: 3rem;
   align-items: center;
 }
 .recipe-card {
