--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -36,8 +36,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: nonwrap;
-      flex-wrap: nonwrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   width: 95vw;
