--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -62,6 +62,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
+  background-color: yellow;
   top: 0;
   left: 0;
   background-position: center;
