--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -33,11 +33,6 @@ body {
 }
 
 .recipe-grid {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   width: 95vw;
@@ -62,6 +57,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
+  background-color: yellow;
   top: 0;
   left: 0;
   background-position: center;
