--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,8 +29,6 @@ body {
   background-color: limegreen;
 }
 .recipe-grid {
-  display: flex;
-  flex-wrap: wrap;
   justify-content: space-around;
   width: 95vw;
   height: auto;
@@ -50,6 +48,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
+  background-color: yellow;
   top: 0;
   left: 0;
   background-position: center;
