--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -33,6 +33,11 @@ body {
 }
 
 .recipe-grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   width: 95vw;
