--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -33,6 +33,11 @@ body {
 }
 
 .recipe-grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   width: 95vw;
@@ -51,39 +56,6 @@ body {
   margin: 0 auto;
   position: relative;
   margin: 2rem auto;
-}
-
-.recipe-card-front {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-position: center;
-  z-index: 3;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.recipe-card-back {
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  display: none;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  height: 100%;
 }
 
 .recipe-card-header {
@@ -126,16 +98,5 @@ body {
 .spoon-score {
   font-size: 2rem;
   text-transform: uppercase;
-}
-
-.recipe-card:hover .recipe-card-front {
-  z-index: 1;
-}
-
-.recipe-card:hover .recipe-card-back {
-  z-index: 3;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 /*# sourceMappingURL=style.css.map */
