--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,6 +29,8 @@ body {
   background-color: limegreen;
 }
 .recipe-grid {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   width: 95vw;
   height: auto;
@@ -44,30 +46,7 @@ body {
   position: relative;
   margin: 2rem auto;
 }
-.recipe-card-front {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-position: center;
-  z-index: 3;
-  transition: all 0.3s;
-}
 
-.recipe-card-back {
-  transition: all 0.3s;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  display: none;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
 .recipe-card-header {
   font-size: 3rem;
   text-transform: uppercase;
@@ -99,12 +78,4 @@ body {
 .spoon-score {
   font-size: 2rem;
   text-transform: uppercase;
-}
-
-.recipe-card:hover .recipe-card-front {
-  z-index: 1;
-}
-.recipe-card:hover .recipe-card-back {
-  z-index: 3;
-  display: flex;
 }
