--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -87,7 +87,7 @@ body {
 
   text-align: center;
 }
-.score-box,
+.type-box,
 .food-box {
   text-align: center;
 }
@@ -104,11 +104,11 @@ body {
 .recipe-genre {
   list-style: none;
 }
-.health-score {
+.dairy-free {
   font-size: 2rem;
   text-transform: uppercase;
 }
-.spoon-score {
+.gulten-free {
   font-size: 2rem;
   text-transform: uppercase;
 }
