--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -87,7 +87,7 @@ body {
 
   text-align: center;
 }
-.type-box,
+.score-box,
 .food-box {
   text-align: center;
 }
@@ -104,11 +104,11 @@ body {
 .recipe-genre {
   list-style: none;
 }
-.dairy-free {
+.health-score {
   font-size: 2rem;
   text-transform: uppercase;
 }
-.gulten-free {
+.spoon-score {
   font-size: 2rem;
   text-transform: uppercase;
 }
