--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -100,11 +100,11 @@ body {
 .recipe-genre {
   list-style: none;
 }
-.health-score {
+.dairy-free {
   font-size: 2rem;
   text-transform: uppercase;
 }
-.spoon-score {
+.gluten-free {
   font-size: 2rem;
   text-transform: uppercase;
 }
