--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -81,13 +81,13 @@ body {
   display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -ms-flex-pack: distribute;
-  justify-content: space-around;
+      justify-content: space-around;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   height: 100%;
 }
@@ -124,12 +124,12 @@ body {
   list-style: none;
 }
 
-.health-score {
+.dairy-free {
   font-size: 2rem;
   text-transform: uppercase;
 }
 
-.spoon-score {
+.gluten-free {
   font-size: 2rem;
   text-transform: uppercase;
 }
